
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnBoardingOneMainActivity">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shape_rectangle_brown"
        android:backgroundTint="#A49E9E"
        android:text="@string/simpan_dan_lanjutkan"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="132dp"
        android:gravity="center"
        android:text="@string/upload_photo"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/shape_rectangle_white"
        android:text="@string/lewati"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/iv_profile2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userpict" />

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_line"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile2"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile2"
        app:srcCompat="@drawable/ic_btn_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>